--- a/css/tablet.css
+++ b/css/tablet.css
@@ -6,6 +6,7 @@ body {
 .centered {
     width: auto !important;
 }
+
 .navbar {
     padding-bottom: 20px;
 }
@@ -21,6 +22,11 @@ iframe {
 .navbar-right {
     margin-right: 0;
 }
+
 .background {
-display: none;
+    display: none;
+}
+
+.nav {
+    margin-bottom: 20px;
 }
