--- a/css/desktop.css
+++ b/css/desktop.css
@@ -15,8 +15,8 @@ body {
     width: 100% !important;
     height: 200px;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 0px -350px;
+    background-size: cover;
+    background-position: 0px -300px;
 }
 
 nav {
@@ -102,6 +102,7 @@ h1 {
     width: 100%;
     font-size: 10px;
     margin-top: 100px;
+    margin-bottom: 20px;
     border-top: 1px solid #eee;
     padding-top: 20px;
 }
@@ -123,11 +124,13 @@ h1 {
     position: absolute;
     left: 10px;
 }
+
 #top-link-block.affix {
     position: fixed;
     bottom: 18px;
     left: 10px;
 }
+
 #top-link-block > a {
     color: black;
 }
