--- a/css/tablet.css
+++ b/css/tablet.css
@@ -30,3 +30,22 @@ iframe {
 .nav {
     margin-bottom: 20px;
 }
+
+#top-link-block{
+    padding-left: 70%;
+    padding-bottom: 3% ;
+}
+#top-link-block.affix-top {
+    position: absolute;
+    left: 10px;
+}
+
+#top-link-block.affix {
+    position: fixed;
+    bottom: 18px;
+    left: 10px;
+}
+
+#top-link-block > a {
+    color: black;
+}
