--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,7 +1,32 @@
+@font-face {
+    font-family: 'kollektif';
+    src: url('../fonts/kollektif-webfont.eot');
+    src: url('../fonts/kollektif-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/kollektif-webfont.woff2') format('woff2'),
+    url('../fonts/kollektif-webfont.woff') format('woff'),
+    url('../fonts/kollektif-webfont.ttf') format('truetype'),
+    url('../fonts/kollektif-webfont.svg#kollektifregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'norwester';
+    src: url('../fonts/norwester.eot');
+    src: url('../fonts/norwester?#iefix') format('embedded-opentype'),
+    url('../fonts/norwester.woff2') format('woff2'),
+    url('../fonts/norwester.woff') format('woff'),
+    url('../fonts/norwester.ttf') format('truetype'),
+    url('../fonts/norwester.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
     background-color: #373743;
     color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .centered {
@@ -27,8 +52,10 @@ a {
     color: white;
 }
 
-h1 {
-    font-family: 'Playfair Display', serif;
+h1, h2, h3 {
+    font-family: 'kollektif', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 10px;
 }
 
 .navbar {
@@ -47,9 +74,9 @@ h1 {
 .navbar-default .navbar-brand {
     color: white;
     text-transform: uppercase;
-    font-weight: 700;
     letter-spacing: 4px;
-    font-family: 'Playfair Display', serif;
+    font-family: 'norwester', serif;
+    font-size: 30px;
 }
 
 .nav > li > a:focus, .nav > li > a:hover {
@@ -76,7 +103,7 @@ h1 {
 }
 
 .jumbotron {
-    background-image: url("../images/jumbotron.png");
+    background-image: url("../images/home.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
