--- a/css/desktop-subpages.css
+++ b/css/desktop-subpages.css
@@ -11,7 +11,7 @@
 
 .background-rules {
     z-index: -99;
-    background-image: url("../images/2016-04-14_18.52.39.png");
+    background-image: url("../images/2016-04-14_18.50.11.png");
     width: 100% !important;
     height: 300px;
     background-repeat: no-repeat;
@@ -23,4 +23,4 @@
     margin: 0 auto;
     margin-top: 200px;
     width: 800px;
-}
+}ß
