--- a/css/desktop.css
+++ b/css/desktop.css
@@ -24,8 +24,8 @@
 }
 
 body {
-    background-color: #373743;
-    color: white;
+    background-color: #dedede;
+    color: black;
     font-family: 'Lato', sans-serif;
 }
 
@@ -86,7 +86,6 @@ h1, h2, h3 {
 
 .navbar-default .navbar-nav > li > a {
     color: white;
-    border-bottom: 1px solid #261818;
 }
 
 .navbar-right {
@@ -95,7 +94,6 @@ h1, h2, h3 {
 
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
     color: #5e5e5e;
-    border-bottom: 1px solid #eeeeee;
 }
 
 .navbar-default .navbar-toggle {
@@ -139,12 +137,15 @@ h1, h2, h3 {
     font-size: 10px;
     margin-top: 100px;
     margin-bottom: 20px;
-    border-top: 1px solid #eee;
+    border-top: 1px solid rgba(153, 153, 153, 0.57);
     padding-top: 20px;
 }
 
 .footer > .container-fluid > a {
     color: #8c8c8c;
+}
+.footer > .container-fluid > .nav > li > a {
+    color: #3d3d3d;
 }
 
 .footer > .container-fluid > a:hover {
