--- a/css/desktop.css
+++ b/css/desktop.css
@@ -24,7 +24,7 @@
 }
 
 body {
-    background-color: #dedede;
+    background-color: #ffffff;
     color: black;
     font-family: 'Lato', sans-serif;
 }
@@ -38,7 +38,13 @@ body {
     background-size: cover;
     position: absolute;
 }
-
+.presimages {
+    background-image: url("../images/home.png");
+    width: 100% !important;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: auto;
+}
 nav {
     width: 100%
 }
@@ -57,7 +63,9 @@ h1, h2, h3 {
     text-transform: uppercase;
     letter-spacing: 10px;
 }
-
+.noletterspacing {
+    letter-spacing: 0px;
+}
 .navbar {
     margin-top: 50px;
     background-color: transparent;
@@ -107,12 +115,23 @@ h1, h2, h3 {
     background-position: center;
     height: 400px;
 }
+
 .jumbotron-custom {
     display: none;
+}
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 100%;
+    margin: auto;
 }
 .custom-container-fluid {
     margin: 0 auto;
     margin-top: 400px;
+    width: 800px;
+}
+
+.custom-container-fluid-section {
+    margin: 0 auto;
     width: 800px;
 }
 #iframealert {
