--- a/css/desktop.css
+++ b/css/desktop.css
@@ -36,6 +36,7 @@ body {
     height: 500px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center 20%;
     position: absolute;
 }
 .presimages {
