--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,23 +1,24 @@
 @font-face {
     font-family: 'kollektif';
-    src: url('/fonts/kollektif/kollektif-webfont.eot');
-    src: url('/fonts/kollektif/kollektif-webfont.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/kollektif/kollektif-webfont.woff2') format('woff2'),
-    url('/fonts/kollektif/kollektif-webfont.woff') format('woff'),
-    url('/fonts/kollektif/kollektif-webfont.ttf') format('truetype'),
-    url('/fonts/kollektif/kollektif-webfont.svg#kollektifregular') format('svg');
+    src: url('../fonts/kollektif/kollektif-webfont.eot');
+    src: url('../fonts/kollektif/kollektif-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/kollektif/kollektif-webfont.woff2') format('woff2'),
+    url('../fonts/kollektif/kollektif-webfont.woff') format('woff'),
+    url('../fonts/kollektif/kollektif-webfont.ttf') format('truetype'),
+    url('../fonts/kollektif/kollektif-webfont.svg#kollektifregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
+
 @font-face {
     font-family: 'norwester';
-    src: url('/fonts/norwester/norwester.eot');
-    src: url('/fonts/norwester/norwester?#iefix') format('embedded-opentype'),
-    url('/fonts/norwester/norwester.woff2') format('woff2'),
-    url('/fonts/norwester/norwester.woff') format('woff'),
-    url('/fonts/norwester/norwester.ttf') format('truetype'),
-    url('/fonts/norwester/norwester.svg') format('svg');
+    src: url('../fonts/norwester/norwester.eot');
+    src: url('../fonts/norwester/norwester?#iefix') format('embedded-opentype'),
+    url('../fonts/norwester/norwester.woff2') format('woff2'),
+    url('../fonts/norwester/norwester.woff') format('woff'),
+    url('../fonts/norwester/norwester.ttf') format('truetype'),
+    url('../fonts/norwester/norwester.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -46,10 +47,10 @@ body {
     height: 300px;
     position: absolute;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+73&0.8+0,0.1+59,0+73 */
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1) 59%, rgba(0,0,0,0) 73%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.1) 59%,rgba(0,0,0,0) 73%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.1) 59%,rgba(0,0,0,0) 73%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.1) 59%, rgba(0, 0, 0, 0) 73%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.1) 59%, rgba(0, 0, 0, 0) 73%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.1) 59%, rgba(0, 0, 0, 0) 73%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cc000000', endColorstr='#00000000', GradientType=0); /* IE6-9 */
 }
 
 .presimages {
@@ -59,6 +60,7 @@ body {
     background-repeat: no-repeat;
     background-size: auto;
 }
+
 nav {
     width: 100%
 }
@@ -68,18 +70,17 @@ nav {
     margin: 0 auto;
     width: 800px;
 }
-a {
-    color: white;
-}
 
 h1, h2, h3 {
     font-family: 'kollektif', sans-serif;
     text-transform: uppercase;
     letter-spacing: 10px;
 }
+
 .noletterspacing {
     letter-spacing: 0px;
 }
+
 .navbar {
     margin-top: 50px;
     background-color: transparent;
@@ -91,6 +92,14 @@ h1, h2, h3 {
     text-transform: uppercase;
     padding-bottom: 10px;
 
+}
+
+body > div.centered > div > div.row.features > div {
+    text-align: center;
+}
+
+body > div.container-fluid.custom-container-fluid-section {
+    text-align: center;
 }
 
 .navbar-default .navbar-brand {
@@ -133,11 +142,23 @@ h1, h2, h3 {
 .jumbotron-custom {
     display: none;
 }
+
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     width: 100%;
     margin: auto;
+    height: 10%;
 }
+
+#myCarousel {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
 .custom-container-fluid {
     margin: 0 auto;
     margin-top: 400px;
@@ -149,6 +170,7 @@ h1, h2, h3 {
     margin: 0 auto;
     width: 800px;
 }
+
 #iframealert {
     display: none;
 }
@@ -160,26 +182,62 @@ h1, h2, h3 {
 .list-group, .panel-body {
     color: black;
 }
+
 .rulestoc {
     width: 300px;
 }
+
 .footer {
     bottom: 0;
     /* Set the fixed height of the footer here */
     height: 60px;
     width: 100%;
-    font-size: 10px;
-    margin-top: 100px;
+    font-size: 11px;
+    margin-top: 70px;
     margin-bottom: 20px;
     border-top: 1px solid rgba(153, 153, 153, 0.57);
     padding-top: 20px;
 }
 
+.footer-copy {
+    padding: 0;
+    padding-top: 10px;
+}
+
 .footer > .container-fluid > a {
     color: #8c8c8c;
 }
-.footer > .container-fluid > .nav > li > a {
+.social-icons {
+    float: right !important;
+    text-align: right;
+}
+.social-icons > ul > li{
+    display: inline;
+    text-decoration: none;
+    padding: 0;
+    padding-right: 10px;
+}
+.social-icons > ul > li > a:hover{
+    text-decoration: none;
+    color: #5e5e5e;
+}
+.social-icons > ul > li > a > svg {
+    width: 20px;
+    fill: #5b5b5b;
+}
+.social-icons > ul > li > a > svg:hover {
+    width: 20px;
+    fill: #232323;
+}
+.footer > .container-fluid > .row > .col-md-5 > .nav > li > a {
     color: #3d3d3d;
+}
+
+.footer > .container-fluid > .row > .col-md-7 > ul {
+    list-style: none;
+    padding: 0;
+    padding-top: 5px;
+
 }
 
 .footer > .container-fluid > a:hover {
@@ -190,9 +248,11 @@ h1, h2, h3 {
 .footer > .container-fluid {
     padding-left: 0;
 }
+
 .footer > .custom-container-fluid {
     margin-top: auto;
 }
+
 #top-link-block.affix-top {
     position: absolute;
     right: 10px;
@@ -208,14 +268,16 @@ h1, h2, h3 {
     color: black;
 }
 
-.showonmobile{
+.showonmobile {
     display: none;
 }
+
 .quote-box {
     margin-top: -50px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 3px;
 }
+
 .quote {
     letter-spacing: 1px;
     color: white;
