--- a/css/tablet.css
+++ b/css/tablet.css
@@ -10,6 +10,10 @@ body {
 .navbar-default .navbar-nav > li > a {
 
 }
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+}
 .custom-container-fluid {
     width: auto !important;
     margin-top: 400px !important;
@@ -73,6 +77,11 @@ iframe {
 #top-link-block > a {
 }
 
+.social-icons {
+    float: none !important;
+    text-align: center;
+    margin-left: -20px;
+}
 
 .hideonmobile {
     display: none;
