--- a/css/desktop-subpages.css
+++ b/css/desktop-subpages.css
@@ -19,17 +19,18 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 .background-about {
-    background-image: url("../images/header_images/header1.png");
+    background-image: url("../images/header_images/header3.png");
 }
 
 .background-rules {
     background-image: url("../images/header_images/header2.png");
 }
-.background-events {
-    background-image: url("../images/header_images/header2.png");
+
+.background-status {
+    background-image: url("../images/header_images/header4.png");
 }
 .custom-container-fluid {
     margin: 0 auto;
     margin-top: 200px;
     width: 800px;
-}ß
+}
