--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ section h1 {
 .new-feature {
     color: white;
     /*background-image: url(../images/header4.jpg);*/
-    background-image: url("../images/maingif.gif");
+    /*background-image: url("../images/maingif.gif");*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
@@ -202,7 +202,7 @@ section h1 {
 }
 
 .new-feature h1 {
-     color: white;
+    color: #a46aff;
  }
 
 .new-feature h2 {
@@ -235,29 +235,6 @@ section h1 {
 .new-feature .container {
     padding-top: 10%;
 }
-.server-feature {
-    background-color: rgb(75, 75, 75);
-    border: #25c2f2;
-    border-style: solid;
-    border-radius: 6px;
-    margin-bottom: 20px;
-    transition: box-shadow 1s, border 1s;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 400px;
-    position: relative;
-    color: white;
-}
-
-.server-feature:hover {
-    -webkit-box-shadow: 0px 10px 60px -4px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 10px 60px -4px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 10px 60px -4px rgba(0, 0, 0, 0.3);
-    border: #55f22a;
-    border-style: solid;
-    border-radius: 6px;
-    transition: box-shadow 1s, border 1s;
-}
 
 
 .server-feature h2 {
@@ -269,15 +246,6 @@ section h1 {
     color: white;
 }
 
-.server-feature-container {
-    width: 100%;
-    height: 50%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    background-color: rgb(75, 75, 75);
-    border-radius: 6px;
-}
 
 .server-status {
     margin-top: 50px;
@@ -309,7 +277,7 @@ section h1 {
     margin-top: 5px;
     margin-bottom: 2px;
     font-size: 50px;
-    color: white;
+    /*color: white;*/
 /*    background-color: #0f0f0f;*/
     /*display: inline;*/
 }
@@ -436,8 +404,8 @@ section h1 {
 
 
     .new-feature {
-        /*background-color: #25c2f2;*/
-        background-image: url("../images/maingif.gif");
+        background-color: #cdf24b;
+        color: black;
     }
     
     .mcserver{
