--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,10 @@ section h1 {
     margin-bottom: 0px;
 }
 
+.midgardalert {
+    padding-top: 10px;
+}
+
 @media (min-width:300px) {
     section h1, .feature-content h1 {
         font-size: 30px;
