--- a/assets/main.css
+++ b/assets/main.css
@@ -30,6 +30,11 @@ li.menu-apply a {color: #fff!important;}
 
 .a-2 .row {width: 60%; margin: 0 auto;}
 
+.a-3 {background-color: #91278f;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23cacdcf' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); color: #fff;}
+
+.a-3 .row {width: 60%; margin: 0 auto;}
+
 .front-features {background-color: #e6e7e8;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23cacdcf' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");}
 
